Cleanup Intellij warnings in Hive metadata and metastore code
(cherry picked from commit 480242799d8e1d26f9005ab048f7a30605270350)
(cherry picked from commit f6e50291555d41f0fdf24c342733fc78785bcaf6)